[package]
name = "ebpf_tcp_proxy"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = "1.3"
redbpf-probes = "1.3"

[build-dependencies]
cargo-bpf = { version = "1.3", default-features = false }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "sockmap_parser"
path = "src/sockmap_parser/main.rs"
required-features = ["probes"]
