[package]
default-run = "ebpf_tcp_proxy"
edition = '2018'
name = "ebpf_tcp_proxy"
version = "0.1.0"

[dependencies]
bpf-sys = { version = "1.3", path = "../redbpf/bpf-sys" }
cty = "0.2"
redbpf = { version = "1.3", features = ["load"], path = "../redbpf/redbpf" }
redbpf-macros = { version = "1.3", path = "../redbpf/redbpf-macros" }
redbpf-probes = { version = "1.3", path = "../redbpf/redbpf-probes" }

[build-dependencies]
cargo-bpf = { version = "1.3", default-features = false }

[features]
default = []
probes = []

[[bin]]
name = "sockmap_parser"
path = "src/sockmap_parser/main.rs"
required-features = ["probes"]
